chore: Update Meilisearch configuration, add Minio service, refactor code structure, update goctl templates, add tag and comment sql, add relevant module
