# model/usermodel_gen.go
@@ -19,8 +19,8 @@ import (
 var (
 	userFieldNames          = builder.RawFieldNames(&User{})
 	userRows                = strings.Join(userFieldNames, ",")
-	userRowsExpectAutoSet   = strings.Join(stringx.Remove(userFieldNames, "`id`", "`create_at`", "`create_time`", "`created_at`", "`update_at`", "`update_time`", "`updated_at`"), ",")
-	userRowsWithPlaceHolder = strings.Join(stringx.Remove(userFieldNames, "`id`", "`create_at`", "`create_time`", "`created_at`", "`update_at`", "`update_time`", "`updated_at`"), "=?,") + "=?"
+	userRowsExpectAutoSet   = strings.Join(stringx.Remove(userFieldNames, "`id`", "`create_at`", "`create_time`", "`created_at`", "`status`", "`update_at`", "`update_time`", "`updated_at`"), ",")
+	userRowsWithPlaceHolder = strings.Join(stringx.Remove(userFieldNames, "`id`", "`create_at`", "`create_time`", "`created_at`", "`status`", "`update_at`", "`update_time`", "`updated_at`"), "=?,") + "=?"
 
 	cacheUserIdPrefix       = "cache:user:id:"
 	cacheUserEmailPrefix    = "cache:user:email:"
@@ -50,7 +50,8 @@ type (
 		AvatarUrl    string    `db:"avatar_url"`
 		Introduction string    `db:"introduction"`
 		ProfileInfo  string    `db:"profile_info"`
-		Status       int64     `db:"status"` // 0: active, 1: deleted
+		Reputation   int64     `db:"reputation"` // Reputation can be used to vote up or down
+		Status       int64     `db:"status"`     // 1: active, 0: deleted
 		CreatedAt    time.Time `db:"created_at"`
 		UpdatedAt    time.Time `db:"updated_at"`
 	}
@@ -83,7 +84,7 @@ func (m *defaultUserModel) FindOne(ctx context.Context, id uint64) (*User, error
 	userIdKey := fmt.Sprintf("%s%v", cacheUserIdPrefix, id)
 	var resp User
 	err := m.QueryRowCtx(ctx, &resp, userIdKey, func(ctx context.Context, conn sqlx.SqlConn, v any) error {
-		query := fmt.Sprintf("select %s from %s where `id` = ? limit 1", userRows, m.table)
+		query := fmt.Sprintf("select %s from %s where `id` = ? AND `status` = 1 limit 1", userRows, m.table)
 		return conn.QueryRowCtx(ctx, v, query, id)
 	})
 	switch err {
@@ -100,7 +101,7 @@ func (m *defaultUserModel) FindOneByEmail(ctx context.Context, email string) (*U
 	userEmailKey := fmt.Sprintf("%s%v", cacheUserEmailPrefix, email)
 	var resp User
 	err := m.QueryRowIndexCtx(ctx, &resp, userEmailKey, m.formatPrimary, func(ctx context.Context, conn sqlx.SqlConn, v any) (i any, e error) {
-		query := fmt.Sprintf("select %s from %s where `email` = ? limit 1", userRows, m.table)
+		query := fmt.Sprintf("select %s from %s where `email` = ? AND `status` = 1 limit 1", userRows, m.table)
 		if err := conn.QueryRowCtx(ctx, &resp, query, email); err != nil {
 			return nil, err
 		}
@@ -120,7 +121,7 @@ func (m *defaultUserModel) FindOneByUsername(ctx context.Context, username strin
 	userUsernameKey := fmt.Sprintf("%s%v", cacheUserUsernamePrefix, username)
 	var resp User
 	err := m.QueryRowIndexCtx(ctx, &resp, userUsernameKey, m.formatPrimary, func(ctx context.Context, conn sqlx.SqlConn, v any) (i any, e error) {
-		query := fmt.Sprintf("select %s from %s where `username` = ? limit 1", userRows, m.table)
+		query := fmt.Sprintf("select %s from %s where `username` = ? AND `status` = 1 limit 1", userRows, m.table)
 		if err := conn.QueryRowCtx(ctx, &resp, query, username); err != nil {
 			return nil, err
 		}
@@ -142,7 +143,7 @@ func (m *defaultUserModel) Insert(ctx context.Context, data *User) (sql.Result, 
 	userUsernameKey := fmt.Sprintf("%s%v", cacheUserUsernamePrefix, data.Username)
 	ret, err := m.ExecCtx(ctx, func(ctx context.Context, conn sqlx.SqlConn) (result sql.Result, err error) {
 		query := fmt.Sprintf("insert into %s (%s) values (?, ?, ?, ?, ?, ?, ?)", m.table, userRowsExpectAutoSet)
-		return conn.ExecCtx(ctx, query, data.Username, data.Email, data.Password, data.AvatarUrl, data.Introduction, data.ProfileInfo, data.Status)
+		return conn.ExecCtx(ctx, query, data.Username, data.Email, data.Password, data.AvatarUrl, data.Introduction, data.ProfileInfo, data.Reputation)
 	}, userEmailKey, userIdKey, userUsernameKey)
 	return ret, err
 }
@@ -158,7 +159,7 @@ func (m *defaultUserModel) Update(ctx context.Context, newData *User) error {
 	userUsernameKey := fmt.Sprintf("%s%v", cacheUserUsernamePrefix, data.Username)
 	_, err = m.ExecCtx(ctx, func(ctx context.Context, conn sqlx.SqlConn) (result sql.Result, err error) {
 		query := fmt.Sprintf("update %s set %s where `id` = ?", m.table, userRowsWithPlaceHolder)
-		return conn.ExecCtx(ctx, query, newData.Username, newData.Email, newData.Password, newData.AvatarUrl, newData.Introduction, newData.ProfileInfo, newData.Status, newData.Id)
+		return conn.ExecCtx(ctx, query, newData.Username, newData.Email, newData.Password, newData.AvatarUrl, newData.Introduction, newData.ProfileInfo, newData.Reputation, newData.Id)
 	}, userEmailKey, userIdKey, userUsernameKey)
 	return err
 }
@@ -168,7 +169,7 @@ func (m *defaultUserModel) formatPrimary(primary any) string {
 }
 
 func (m *defaultUserModel) queryPrimary(ctx context.Context, conn sqlx.SqlConn, v, primary any) error {
-	query := fmt.Sprintf("select %s from %s where `id` = ? limit 1", userRows, m.table)
+	query := fmt.Sprintf("select %s from %s where `id` = ? AND `status` = 1 limit 1", userRows, m.table)
 	return conn.QueryRowCtx(ctx, v, query, primary)
 }
 
